Add consumerKey and consumerSecret

--- a/twitter_alamofire_demo/Base.lproj/Main.storyboard
+++ b/twitter_alamofire_demo/Base.lproj/Main.storyboard
@@ -34,12 +34,10 @@
                                 <rect key="frame" x="51" y="198" width="272" height="144"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="buX-oa-Er5">
-                                <rect key="frame" x="39" y="350" width="311" height="60"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="buX-oa-Er5">
+                                <rect key="frame" x="46" y="364" width="282" height="54"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.70868420600891113" green="0.36942082643508911" blue="0.51772314310073853" alpha="0.77247431506849318" colorSpace="custom" customColorSpace="displayP3"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="hT9-nB-3td"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" name="Dosis-Regular" family="Dosis" pointSize="20"/>
                                 <state key="normal" title="Login with Twitter"/>
                                 <connections>
@@ -50,6 +48,7 @@
                         <color key="backgroundColor" red="0.30162304639816284" green="0.61987489461898804" blue="0.92161476612091064" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
                     <connections>
+                        <outlet property="loginButton" destination="buX-oa-Er5" id="Y87-cb-0wU"/>
                         <segue destination="RFK-Vv-pWW" kind="presentation" identifier="loginSegue" id="bSJ-ea-DmV"/>
                     </connections>
                 </viewController>
