--- a/twitter_alamofire_demo/Base.lproj/Main.storyboard
+++ b/twitter_alamofire_demo/Base.lproj/Main.storyboard
@@ -133,7 +133,7 @@
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="73" id="bhM-34-qW7"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" name="Dosis-Light" family="Dosis" pointSize="10"/>
+                                                    <fontDescription key="fontDescription" name="Dosis-Light" family="Dosis" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -356,7 +356,7 @@
             <objects>
                 <navigationController storyboardIdentifier="TweetsNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="7of-2O-CcN" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="2n1-ba-f1y">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2n1-ba-f1y">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
